Initial start screen

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -4,7 +4,7 @@
 * {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  -webkit-tap-highlight-color: $black;
+  -webkit-tap-highlight-color: $black-opac;
 }
 
 // Set HTML to 62.5% to make it easier setting REM/EM values
