--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,13 +21,13 @@
 @import 'base/base', 'base/typography';
 
 // Import layout
-// @import 'layout/**/*';
+@import 'layout/**/*';
 
 // Import components
 @import 'components/**/*';
 
 // Import elements
-// @import 'elements/**/*';
+@import 'elements/**/*';
 
 // Import content
-// @import 'content/**/*';
+@import 'content/**/*';
