--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -14,12 +14,11 @@ $base-line-height: 1.5;
 // Colors
 $white: #fff;
 $white-opac: rgba(255, 255, 255, .5);
-$black: rgba(0, 0, 0, 0);
+$black-opac: rgba(0, 0, 0, 0);
+$black: rgba(0, 0, 0, 1);
 $light-grey: #ccc;
 
 // Color gradients
-$pink: #FF00CC, #333399;
-$blue: #00A1FF, #0072FF;
 
 // Typography
 $avenir-ob:'Avenir LT W01_55 Obliqu1475526';
@@ -27,6 +26,7 @@ $avenir-black:'Avenir LT W01_95 Black1475556';
 $avenir-book: 'Avenir LT W01_55 Book1475526';
 
 // Font sizes
+$heading-one-big: 26;
 $heading-one: 10rem;
 $heading-one-medium: 7.5rem;
 $heading-one-small: 4rem;
