--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -13,12 +13,14 @@ $base-line-height: 1.5;
 
 // Colors
 $white: #fff;
-$white-opac: rgba(255, 255, 255, .5);
+$white-opac: rgba(255, 255, 255, .2);
 $black-opac: rgba(0, 0, 0, 0);
 $black: rgba(0, 0, 0, 1);
 $light-grey: #ccc;
 
 // Color gradients
+$pink: #f095ff;
+$pinkred: #f55260;
 
 // Typography
 $avenir-ob:'Avenir LT W01_55 Obliqu1475526';
