--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -17,6 +17,7 @@ $white-opac: rgba(255, 255, 255, .2);
 $black-opac: rgba(0, 0, 0, 0);
 $black: rgba(0, 0, 0, 1);
 $light-grey: #ccc;
+$grey-pink: #f3eaf4;
 
 // Color gradients
 $pink: #f095ff;
