--- a/scss/components/_menu-btn.scss
+++ b/scss/components/_menu-btn.scss
@@ -17,8 +17,43 @@
   transition: background .2s;
   outline: 0;
 
+  span {
+    display: block;
+  }
+
+  .color-change & {
+    background: linear-gradient(135deg, $pink, $pinkred);
+
+    span {
+      background: linear-gradient(135deg, $pink, $pinkred);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    &:after {
+      display: block;
+    }
+  }
+
+  &:after {
+    height: 70px;
+    width: 70px;
+    background: $white;
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: -1;
+    top: 5px;
+    left: 5px;
+    display: none;
+  }
+
   &:hover {
     background: $white-opac;
+
+    .color-change & {
+      background: linear-gradient(135deg, $pink, $pinkred);
+    }
   }
 
   // Closed state
