Fixed gradient for social media.

--- a/scss/layout/_social-media.scss
+++ b/scss/layout/_social-media.scss
@@ -21,10 +21,14 @@
     }
   }
 
+  path {
+    fill: white;
+  }
+
   .color-change & {
 
     path {
-      fill: $pinkred;
+      fill: inherit;
     }
   }
 }
