Case start polish also added reveal JS

--- a/scss/components/_menu-btn.scss
+++ b/scss/components/_menu-btn.scss
@@ -30,12 +30,12 @@
       -webkit-text-fill-color: transparent;
     }
 
-    &:after {
+    &::after {
       display: block;
     }
   }
 
-  &:after {
+  &::after {
     height: 70px;
     width: 70px;
     background: $white;
