Initial styling & markup for cases

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -35,3 +35,8 @@ body {
   @include font-size();
   font-family: $avenir-black;
 }
+
+// Ta bort denna för mer seamless känsla alt. fixa
+.past {
+  display: none !important;
+}
