--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -3,7 +3,10 @@ h1 {
 }
 
 h2 {
-
+  @include font-size(5.2);
+  letter-spacing: 5px;
+  font-family: $avenir-medium;
+  font-weight: normal;
 }
 
 h3 {
@@ -23,7 +26,9 @@ h6 {
 }
 
 p {
-
+  @include font-size(2.2, 1.82);
+  font-family: $avenir-book;
+  font-weight: normal;
 }
 
 em,
