--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -26,7 +26,8 @@ $pinkred: #f55260;
 // Typography
 $avenir-ob:'Avenir LT W01_55 Obliqu1475526';
 $avenir-black:'Avenir LT W01_95 Black1475556';
-$avenir-book: 'Avenir LT W01_55 Book1475526';
+$avenir-book: 'Avenir LT W01_45 Book1475508';
+$avenir-medium: 'AvenirNextLTW01-Medium';
 
 // Font sizes
 $heading-one-big: 26;
