--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -28,6 +28,7 @@ $avenir-ob:'Avenir LT W01_55 Obliqu1475526';
 $avenir-black:'Avenir LT W01_95 Black1475556';
 $avenir-book: 'Avenir LT W01_45 Book1475508';
 $avenir-medium: 'AvenirNextLTW01-Medium';
+$avenir-light: 'Avenir LT W01_35 Light1475496';
 
 // Font sizes
 $heading-one-big: 26;
