--- a/scss/elements/_after-case.scss
+++ b/scss/elements/_after-case.scss
@@ -2,6 +2,49 @@
   background: linear-gradient(135deg, $pink, $pinkred);
   width: 100%;
   height: 100vh;
-  z-index: 1;
   box-shadow: inset 0px 0px 40px rgba(82, 0, 75, .6);
+  position: relative;
+  color: $white;
+  z-index: 30;
+}
+
+.after-case__nav {
+  width: 960px;
+  margin: 0 auto;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.after-case__nav__item {
+  list-style: none;
+
+  a {
+    @include font-size(5.2)
+    font-family: $avenir-light;
+    color: $white;
+    text-decoration: none;
+    position: relative;
+
+    &::after {
+      width: 100%;
+      position: absolute;
+      height: 3px;
+      background: $white;
+      display: inline-block;
+      left: 0;
+      content: '';
+      top: 33px;
+      border-radius: 10px;
+      width: 0;
+      transition: width .5s;
+    }
+
+    &:hover::after,
+    &.active::after {
+      width: 100%;
+    }
+  }
 }
