Minor case fixes and animation polish

--- a/scss/layout/_case.scss
+++ b/scss/layout/_case.scss
@@ -1,5 +1,5 @@
 .case {
-  background: linear-gradient(135deg, #fff, 80%, #eaeced);
+  background: linear-gradient(135deg, #fff, 80%, #dee5e8);
   width: 100%;
   height: 100vh;
   position: relative;
