--- a/scss/content/_case.scss
+++ b/scss/content/_case.scss
@@ -22,13 +22,25 @@
 
   p {
     text-align: justify;
-    margin: 0 auto 100px;
+    margin: 0 auto 50px;
   }
 
   img {
     margin: 100px auto 200px;
     display: block;
     max-width: 100%;
+  }
+
+  .case__vis {
+    max-width: 648px;
+  }
+
+  .case__flow {
+    margin-bottom: 100px;
+
+    &:last-child {
+      margin-bottom: 200px;
+    }
   }
 
   .big-pic {
