--- a/assets/perfect-scrollbar/css/perfect-scrollbar.css
+++ b/assets/perfect-scrollbar/css/perfect-scrollbar.css
@@ -52,6 +52,7 @@
     display: none;
     position: absolute;
     /* please don't change 'position' */
+    z-index: 11;
     -webkit-transition: background-color .2s linear, opacity .2s linear;
     -o-transition: background-color .2s linear, opacity .2s linear;
     -moz-transition: background-color .2s linear, opacity .2s linear;
@@ -62,6 +63,7 @@
     .ps-container > .ps-scrollbar-y-rail > .ps-scrollbar-y {
       position: absolute;
       /* please don't change 'position' */
+      z-index: 11;
       background: linear-gradient(135deg, #f095ff, #f55260);
       -webkit-transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, -webkit-border-radius .2s ease-in-out;
       transition: background-color .2s linear, height .2s linear, width .2s ease-in-out, -webkit-border-radius .2s ease-in-out;
