--- a/scss/components/_menu-btn.scss
+++ b/scss/components/_menu-btn.scss
@@ -5,9 +5,8 @@
   position: fixed;
   top: 50px;
   left: 50px;
-  z-index: 2;
-  border: 5px solid $white;
-  padding: 11px 18px;
+  z-index: 10;
+  padding: 2px 0 0 22px;
   text-transform: uppercase;
   font-size: 2.3rem;
   letter-spacing: 8px;
@@ -22,37 +21,52 @@
   }
 
   .color-change & {
-    background: linear-gradient(135deg, $pink, $pinkred);
+
+    &::before {
+      background-image: linear-gradient(to right, $pink 0%, $pinkred 100%), linear-gradient(to left, $pink 0%, $pinkred 100%);
+    }
+
+    &::after {
+      background-image: linear-gradient(to bottom, $pink 0%, $pinkred 100%), linear-gradient(to top, $pink 0%, $pinkred 100%);
+    }
 
     span {
       background: linear-gradient(135deg, $pink, $pinkred);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
+  }
 
-    &::after {
-      display: block;
-    }
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  &::before {
+    background-position: 0 0, 0 100% ;
+    background-repeat: no-repeat;
+    background-size: 100% 5px;
+    background-image: linear-gradient(to bottom, $white 0%, $white 100%), linear-gradient(to top, $white 0%, $white 100%);
   }
 
   &::after {
-    height: 70px;
-    width: 70px;
-    background: $white;
-    content: '';
-    display: block;
-    position: absolute;
-    z-index: -1;
-    top: 5px;
-    left: 5px;
-    display: none;
+    background-position: 0 0, 100% 0;
+    background-repeat: no-repeat;
+    background-size: 5px 100%;
+    background-image: linear-gradient(to bottom, $white 0%, $white 100%), linear-gradient(to top, $white 0%, $white 100%);
   }
 
   &:hover {
     background: $white-opac;
 
     .color-change & {
-      background: linear-gradient(135deg, $pink, $pinkred);
+      background: transparent;
     }
   }
 
