--- a/scss/content/_case.scss
+++ b/scss/content/_case.scss
@@ -1,4 +1,5 @@
 .case__body {
+  color: #2a283a;
 
   p,
   h2 {
@@ -38,7 +39,7 @@
   .case__flow {
     margin-bottom: 100px;
 
-    &:last-child {
+    &:last-child{
       margin-bottom: 200px;
     }
   }
