--- a/scss/elements/_after-case.scss
+++ b/scss/elements/_after-case.scss
@@ -2,9 +2,12 @@
   background: linear-gradient(135deg, $pink, $pinkred);
   width: 100%;
   height: 100vh;
-  position: relative;
   color: $white;
-  z-index: 30;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 0;
 }
 
 .after-case__nav {
