--- a/scss/elements/cases-start/_case-start.scss
+++ b/scss/elements/cases-start/_case-start.scss
@@ -15,7 +15,7 @@
 }
 
 .cases {
-  background: linear-gradient(135deg, #fff, 80%, #dee5e8);
+  background: linear-gradient(135deg, rgb(255, 255, 255), 60%, #edf6ff);
   height: 100vh;
   width: 100%;
   z-index: 0;
