--- a/scss/elements/cases-start/_case-text.scss
+++ b/scss/elements/cases-start/_case-text.scss
@@ -1,7 +1,7 @@
 .cases__wrapper__article__top-left {
   @include font-size(4.4, 1.5);
   text-align: left;
-  color: #EEECEC;
+  color: #e7eaef;
   letter-spacing: 10px;
   margin: 0;
   float: left;
@@ -15,7 +15,7 @@
 .cases__wrapper__article__bottom-right {
   @include font-size(4.4, 1.5);
   text-align: left;
-  color: #EEECEC;
+  color: #e7eaef;
   letter-spacing: 10px;
   margin: 0;
   float: left;
@@ -35,8 +35,9 @@
   right: 0;
   text-align: center;
   letter-spacing: 3px;
+  color: #2a283a;
 
-  &:after {
+  &::after {
     content: '';
     display: block;
     width: 80px;
