Added ze content for all cases

--- a/scss/layout/_case.scss
+++ b/scss/layout/_case.scss
@@ -6,9 +6,9 @@
 
 .case__wrapper {
   background: linear-gradient(135deg, #fff, 80%, #f6fcff);
-  margin-bottom: 100vh;
+  margin-bottom: 600px;
   z-index: 3;
   position: relative;
-  box-shadow: 0 0 10px rgba(53, 23, 48, 0.3);
+  box-shadow: 0 0 50px rgba(53, 23, 48, 0.3);
   padding-bottom: 50px;
 }
