--- a/scss/elements/_after-case.scss
+++ b/scss/elements/_after-case.scss
@@ -1,7 +1,7 @@
 .after-case {
   background: linear-gradient(135deg, $pink, $pinkred);
   width: 100%;
-  height: 100vh;
+  height: 600px;
   color: $white;
   position: fixed;
   bottom: 0;
