--- a/scss/elements/cases-start/_case-start.scss
+++ b/scss/elements/cases-start/_case-start.scss
@@ -50,7 +50,7 @@
   background-color: $black;
   background-image: url('/orkester.jpg');
   width: 150px;
-  position: absolute;
+  position: fixed;
   display: block;
   height: 150px;
   border-radius: 100%;
