--- a/scss/elements/start/_viz.scss
+++ b/scss/elements/start/_viz.scss
@@ -30,7 +30,7 @@
     margin: -25px 0 0 15px;
     border-radius: 8px;
     position: relative;
-    min-height: 40px;
+    min-height: 0.1px; // Hack for aliging viz bars when music is muted
 
     &:nth-child(1) {
       z-index: 2;
