--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -19,6 +19,8 @@ $black: rgba(0, 0, 0, 1);
 $light-grey: #ccc;
 $grey-pink: #f3eaf4;
 
+$text: #2a283a;
+
 // Color gradients
 $pink: #f095ff;
 $pinkred: #f55260;
