--- a/public/scss/elements/cases-start/_case-text.scss
+++ b/public/scss/elements/cases-start/_case-text.scss
@@ -43,6 +43,6 @@
     width: 80px;
     background: linear-gradient(135deg, $pinkred, $pink);
     height: 5px;
-    margin: 20px auto 0 auto;
+    margin: 20px auto 0;
   }
 }
