--- a/public/scss/utils/_variables.scss
+++ b/public/scss/utils/_variables.scss
@@ -18,8 +18,24 @@ $black-opac: rgba(0, 0, 0, 0);
 $black: rgba(0, 0, 0, 1);
 $light-grey: #ccc;
 $grey-pink: #f3eaf4;
+$black-three: rgba(0, 0, 0, .3);
+$lighter-grey: #e7eaef;
+$case-grey: #f6fcff;
+
+$black-four: rgba(0, 0, 0, .08);
+
+// menu colors
+$menu-one: #ff85b5;
+$menu-two: #fdf28e;
+
+$menu-three: #86c5fc;
+$menu-four: #e8c3fd;
+
+$menu-five: #fc7b7b;
+$menu-six: #a6c1ff;
 
 $text: #2a283a;
+$grey: #888;
 
 // Color gradients
 $pink: #f095ff;
