--- a/public/scss/elements/_menu.scss
+++ b/public/scss/elements/_menu.scss
@@ -19,7 +19,7 @@
   float: left;
   height: 100%;
   position: relative;
-  box-shadow: 5px 10px 10px rgba(0, 0, 0, .08);
+  box-shadow: 5px 10px 10px $black-four;
 
   &:first-child {
     z-index: 3;
@@ -75,13 +75,13 @@
 }
 
 [data-color='yellow-red'] {
-  background-image: linear-gradient(135deg, #FF85B5, #FDF28E);
+  background-image: linear-gradient(135deg, $menu-one, $menu-two);
 }
 
 [data-color='blue-purple'] {
-  background-image: linear-gradient(135deg, #86C5FC, #E8C3FD);
+  background-image: linear-gradient(135deg, $menu-three, $menu-four);
 }
 
 [data-color='blue-red'] {
-  background-image: linear-gradient(135deg, #FC7B7B, #A6C1FF);
+  background-image: linear-gradient(135deg, $menu-five, $menu-six);
 }
