--- a/public/scss/layout/_case.scss
+++ b/public/scss/layout/_case.scss
@@ -5,7 +5,7 @@
 }
 
 .case__wrapper {
-  background: linear-gradient(135deg, #fff, 80%, #f6fcff);
+  background: linear-gradient(135deg, $white, 80%, $case-grey);
   margin-bottom: 600px;
   z-index: 3;
   position: relative;
