--- a/public/scss/components/_menu-btn.scss
+++ b/public/scss/components/_menu-btn.scss
@@ -46,8 +46,8 @@
 
     span {
       background: linear-gradient(135deg, $pink, $pinkred);
-      background-clip: text;
-      text-fill-color: transparent;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
   }
 
