--- a/public/scss/content/_case.scss
+++ b/public/scss/content/_case.scss
@@ -79,8 +79,8 @@
     left: 50%;
     outline: 0;
     background: linear-gradient(135deg, $pink, $pinkred);
-    background-clip: text;
-    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     display: block;
     text-align: center;
     line-height: 107px;
