--- a/public/scss/components/_read-more-btn.scss
+++ b/public/scss/components/_read-more-btn.scss
@@ -14,8 +14,8 @@
   margin-left: -220px;
   outline: 0;
   background: linear-gradient(135deg, $pinkred, $pink);
-  background-clip: text;
-  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   cursor: pointer;
   display: block;
   text-align: center;
