--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -12,6 +12,7 @@
 
 .cases__wrapper__article {
   height: 100%;
+  padding-left: 120px;
 }
 
 .cases {
@@ -43,6 +44,35 @@
 .letter-wrapper {
   filter: url('#goo');
   overflow: hidden;
+
+  @include media($breakpoint-medium) {
+    height: 500px;
+    width: 500px;
+    filter: none;
+    background-size: 370px;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    &.booking-bg {
+      background-image: url('/images/booking/booking-bg.png');
+    }
+
+    &.ess-bg {
+      background-image: url('/images/ess/ess-bg.png');
+    }
+
+    &.og-bg {
+      background-image: url('/images/og/og-bg.png');
+      background-size: 430px;
+    }
+  }
+
+  svg {
+
+    @include media($breakpoint-medium) {
+      display: none;
+    }
+  }
 }
 
 // Mouse blob
