--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -1,5 +1,5 @@
 h1 {
-
+  font-weight: normal;
 }
 
 h2 {
@@ -10,11 +10,12 @@ h2 {
 }
 
 h3 {
-
+  font-weight: normal;
 }
 
 h4 {
   margin: 0;
+  font-weight: normal;
 }
 
 h5 {
