--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -1,4 +1,5 @@
 .cases__wrapper {
+  transform: scale(1) !important;
   width: 500px;
   margin: 0 auto;
   position: absolute;
@@ -8,11 +9,21 @@
   right: 0;
   top: 50%;
   margin-top: -250px;
+  overflow: visible !important;
+
+  @media screen and (min-width: 1200px) and (min-height: 880px) {
+    transform: scale(1.2) !important;
+  }
+
+  @media screen and (min-width: 1500px) and (min-height: 880px) {
+    transform: scale(1.4) !important;
+  }
 }
 
 .cases__wrapper__article {
   height: 100%;
   padding-left: 120px;
+  top: 0 !important;
 }
 
 .cases {
@@ -31,6 +42,10 @@
   transform-origin: 50% center;
   transition: 1.5s ease-in-out;
   opacity: 0;
+
+  .slow-down & {
+    transition: 1.5s .6s ease-in-out;
+  }
 
   &.active {
     visibility: visible;
