--- a/public/scss/utils/_variables.scss
+++ b/public/scss/utils/_variables.scss
@@ -50,6 +50,7 @@ $avenir-light: 'Avenir LT W01_35 Light1475496';
 
 // Font sizes
 $heading-one-big: 26;
+$heading-one-medium: 15;
 $heading-one: 10rem;
 $heading-one-medium: 7.5rem;
 $heading-one-small: 4rem;
