Fixed filter svg issue for iOS on medium screens sizes.
Also more responsive behaviour besides bugfixing

--- a/public/scss/elements/start/_video-player.scss
+++ b/public/scss/elements/start/_video-player.scss
@@ -27,4 +27,10 @@
   .touchevents & {
     display: block;
   }
+
+  &.touch-bg-two {
+    z-index: 2;
+    opacity: .3;
+    margin-left: -50px;
+  }
 }
