--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -11,6 +11,11 @@ h2 {
   @media screen and (min-width: 1700px) {
     @include font-size(6.2);
   }
+
+  @media screen and (max-width: 960px) {
+    font-size: 4.4rem;
+    line-height: 5rem;
+  }
 }
 
 h3 {
@@ -34,6 +39,10 @@ p {
   @include font-size(2.2, 1.82);
   font-family: $avenir-book;
   font-weight: normal;
+
+  @media screen and (max-width: 960px) {
+    @include font-size(2, 1.82);
+  }
 }
 
 a {
