--- a/public/scss/content/_case.scss
+++ b/public/scss/content/_case.scss
@@ -31,6 +31,10 @@
     margin: 100px auto 200px;
     display: block;
     max-width: 1100px;
+
+    @media screen and (max-width: 960px) {
+      margin: 50px auto 100px;
+    }
   }
 
   .case__vis {
@@ -46,6 +50,10 @@
 
     &:last-child {
       margin-bottom: 200px;
+
+      @media screen and (max-width: 960px) {
+        margin-bottom: 100px;
+      }
     }
   }
 
@@ -90,5 +98,10 @@
     white-space: nowrap;
     margin: 0;
     text-transform: capitalize;
+
+    @media screen and (max-width: 960px) {
+      font-size: 7rem;
+      line-height: 7rem;
+    }
   }
 }
