--- a/public/scss/elements/_after-case.scss
+++ b/public/scss/elements/_after-case.scss
@@ -11,7 +11,8 @@
 }
 
 .after-case__nav {
-  width: 960px;
+  max-width: 960px;
+  padding: 0 20px;
   margin: 0 auto;
   position: absolute;
   left: 0;
