--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -59,6 +59,15 @@
 .letter-wrapper {
   filter: url('#goo');
   overflow: hidden;
+
+  .touchevents & {
+    filter: none;
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .letter-wrapper__effect {
