--- a/public/scss/content/_cv.scss
+++ b/public/scss/content/_cv.scss
@@ -93,3 +93,13 @@
     margin-bottom: -40px;
   }
 }
+
+.cv__rectangle {
+  height: 45px;
+  width: 230px;
+  background: linear-gradient(135deg, $pink, $pinkred);
+  display: block;
+  position: absolute;
+  top: 120px;
+  left: 50px;
+}
