--- a/public/scss/elements/_menu.scss
+++ b/public/scss/elements/_menu.scss
@@ -1,12 +1,36 @@
 .menu {
   position: fixed;
-  left: 190px;
+  left: 0px;
   right: 0;
   bottom: 0;
   top: 0;
   z-index: 20;
   color: $white;
   visibility: hidden;
+  transition: opacity .6s;
+  background: linear-gradient(230deg, #ff85b5, #fdf28e, #86c5fc, #e8c3fd, #9abdeb, #80f9b7);
+  background-size: 1000% 1000%;
+  opacity: 0;
+
+  -webkit-animation: backgroundColor 100s ease infinite;
+  -moz-animation: backgroundColor 100s ease infinite;
+  animation: backgroundColor 100s ease infinite;
+
+  @-webkit-keyframes backgroundColor {
+      0%{background-position:0% 100%}
+      50%{background-position:100% 100%}
+      100%{background-position:0% 100%}
+  }
+  @-moz-keyframes backgroundColor {
+      0%{background-position:0% 100%}
+      50%{background-position:100% 100%}
+      100%{background-position:0% 100%}
+  }
+  @keyframes backgroundColor {
+      0%{background-position:0% 100%}
+      50%{background-position:100% 100%}
+      100%{background-position:0% 100%}
+  }
 
   &.active {
     opacity: 1;
@@ -14,74 +38,56 @@
   }
 }
 
-.menu__item {
-  width: 33.333%;
-  float: left;
-  height: 100%;
-  position: relative;
-  box-shadow: 5px 10px 10px $black-four;
-
-  &:first-child {
-    z-index: 3;
-  }
-
-  &:nth-child(2) {
-    z-index: 2;
-  }
-
-  &:nth-child(3) {
-    z-index: 1;
-  }
-
-  &:hover {
-
-    h2::after {
-      width: 120px;
-    }
-  }
-}
-
-.menu__item__inner {
+.menu__nav {
   position: absolute;
+  left: 200px;
   top: 50%;
   transform: translateY(-50%);
-  padding: 0 50px;
 
-  h2,
-  h4 {
-    margin: 0;
+  li {
+    list-style: none;
+    margin: 0 0 50px;
   }
 
   h2 {
+    margin: 0;
+    font-weight: bold;
     font-family: $avenir-black;
-    letter-spacing: 3px;
+  }
 
-    &::after {
-      transition: width .3s ease-in-out;
-      display: block;
-      content: '';
-      height: 5px;
-      background: $white;
-      width: 80px;
-      margin: 5px 0 15px;
-    }
+  h4 {
+    margin: 0 0 20px;
+    display: block;
+    position: absolute;
+    width: 200px;
   }
 
   a {
-    text-decoration: none;
-    color: inherit;
-    cursor: pointer;
+    color: $white;
+    position: relative;
+    display: inline-block;
+
+    &::after {
+      width: 100%;
+      position: absolute;
+      height: 3px;
+      background: $white;
+      display: inline-block;
+      left: 0;
+      content: '';
+      top: 40px;
+      border-radius: 10px;
+      width: 0;
+      transition: width .5s;
+
+      @media screen and (min-width: 1700px) {
+        top: 48px;
+      }
+    }
+
+    &:hover::after,
+    &.active::after {
+      width: 100%;
+    }
   }
-}
-
-[data-color='yellow-red'] {
-  background-image: linear-gradient(135deg, $menu-one, $menu-two);
-}
-
-[data-color='blue-purple'] {
-  background-image: linear-gradient(135deg, $menu-three, $menu-four);
-}
-
-[data-color='blue-red'] {
-  background-image: linear-gradient(135deg, $menu-five, $menu-six);
 }
