--- a/public/scss/base/_base.scss
+++ b/public/scss/base/_base.scss
@@ -34,6 +34,11 @@ button,
 body {
   @include font-size();
   font-family: $avenir-black;
+
+  @media screen and(max-width: $breakpoint-medium-small) {
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+  }
 }
 
 img {
