--- a/public/scss/base/_typography.scss
+++ b/public/scss/base/_typography.scss
@@ -12,9 +12,9 @@ h2 {
     @include font-size(6.2);
   }
 
-  @media screen and (max-width: 960px) {
-    font-size: 4.4rem;
-    line-height: 5rem;
+  @media screen and(max-width: $breakpoint-medium-small) {
+    font-size: 3.4rem;
+    line-height: 4rem;
   }
 }
 
