--- a/public/scss/components/_mute-btn.scss
+++ b/public/scss/components/_mute-btn.scss
@@ -7,6 +7,10 @@
   outline: 0;
   transition: transform .1s;
 
+  .touchevents & {
+    display: none;
+  }
+
   &:hover {
     transform: scale(1.1);
   }
