--- a/public/scss/utils/_variables.scss
+++ b/public/scss/utils/_variables.scss
@@ -57,4 +57,5 @@ $heading-one-small: 4rem;
 
 // Breakpoints
 $breakpoint-small: max-width 600px;
+$breakpoint-medium-small: 960px;
 $breakpoint-medium: max-width 1100px;
